--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-ansible==2.8.3
+ansible>=2.8.8
 asn1crypto==0.24.0
 astroid==2.2.5
 atomicwrites==1.3.0
 attrs==19.1.0
 cffi==1.12.3
-cryptography==2.7
+cryptography>=3.2
 importlib-metadata==0.19
 isort==4.3.21
 Jinja2==2.10.1
@@ -14,7 +14,7 @@ mccabe==0.6.1
 more-itertools==7.2.0
 packaging==19.0
 pluggy==0.12.0
-psutil==5.6.3
+psutil>=5.6.6
 py==1.8.0
 pycparser==2.19
 pylint==2.3.1
