--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ cffi==1.12.3
 cryptography>=3.2
 importlib-metadata==0.19
 isort==4.3.21
-Jinja2==2.10.1
+jinja2>=2.11.3
 lazy-object-proxy==1.4.1
 MarkupSafe==1.1.1
 mccabe==0.6.1
@@ -15,13 +15,13 @@ more-itertools==7.2.0
 packaging==19.0
 pluggy==0.12.0
 psutil>=5.6.6
-py==1.8.0
+py>=1.10.0
 pycparser==2.19
 pylint==2.3.1
 pyparsing==2.4.1.1
 pytest==5.0.1
 python-vagrant==0.5.15
-PyYAML==5.1.1
+PyYAML==5.4
 six==1.12.0
 testinfra==3.0.5
 typed-ast==1.4.0
